--- a/task11.css
+++ b/task11.css
@@ -1,11 +1,15 @@
+
 .body{
-	width: 70%;
-	position: relative;
-	margin: auto;
 	font-size: 12px;
 	line-height: 20px;
+	width: 100%;
+	margin: auto;
+	position: relative;
 	overflow: hidden;
+
+
 }
+
 .body-topnav{
 	padding: 24px 0;
 	border-bottom: 1px gray solid;
@@ -17,7 +21,7 @@
 	color: #29b078;
 }
 .body-middlenav{
-	margin: 18px 0;
+	margin: 28px 0 8px 0;
 
 }
 .body-middlenav span{
@@ -27,54 +31,49 @@
 	background: #29b078;
 	padding: 2px;
 }
- .list-block{
-	width: 30%;
-	float: left;
-	margin: 45px 20px 0 9.4px;
+
+
+
+
+ .list-block{		
+	margin: 45px 0px 0 0px;
 	overflow: hidden;
+	position: relative;
 }
-.list-block-top{
-	height: 120px;
-	overflow: hidden;
+.m-top{
+	margin-top: 15px;
+}
+.m-left{
+	margin-left: -15px;
+}
+.m-padding{
+	padding-right: 0px!important;
+}
+.m-middle{
+	margin-top: 19.5px;
+	text-align: center;
 }
 .avatar-img{
-	float: left;
+	margin-left: -15px;
 	width: 100px;
-	margin:5px 5px 5px 10px;
+	
 }
 .block-top-font{
 	font-weight: bold;
 	font-size: 16px;
 	margin-top: 10px;
 }
+.list-block-top-text p{
+	line-height: 20px;
+	word-break: break-all;
+}
 .list-block-top-text{
-	overflow: auto;	
-	white-space: nowrap;	
+	margin-left: -20px;
+	
 }
-.list-block-level{
-	width: 45%;
-	float: left;
-	margin: 10px 5px;
-}	
-.treatment{
-	width: 100%;
-	height: 62px;
-	float: left;
-}
-.treatment dt{
-	float: left;
-	width: 41%;
-	line-height: 62px;
-	text-align: center;
-}
-.treatment ul{
+ ul{
 	list-style: none;
-	width: 28%;
-	float: left;
 	overflow: hidden;
-}
-ul.right li{
-	float: right;
 }
 span.red{
 	color: red
@@ -86,33 +85,36 @@ span.red{
 	overflow: hidden;
 }
 
-#introduction{
+.introduction{
+	opacity: 0;
 	position: absolute;
-	top: 5%
+	top: 0%;
+	margin-left: -15px!important;
 	border: 1px red solid;
 	background-color: rgba(61,61,61,0.5);
 	color: white;
 	font-size: 14px;
 	font-weight: bold;
+
 }
 .profession{
+	padding-top: 18%;
 	text-align: center;
-	padding: 18% 0 3% 0;
 	
 }
-.detail{
-	padding: 0 10% 15% 10%;
+.detail{ 
+	padding: 9% 2% 45% 2%;
+	margin-left: 4%;
+	line-height: 24px;
 }
-.introduction1{
-	opacity: 0;
-}
-.introduction1:hover{
+
+.introduction:hover{
 	opacity: 1;
 }
 
 
 .introduction2{
-	margin-left: 33%;
+	
 	opacity: 0;
 }
 .introduction2:hover{
@@ -120,7 +122,7 @@ span.red{
 }
 
 .introduction3{
-	margin-left: 66%;
+
 	opacity: 0;
 }
 .introduction3:hover{
