--- a/task6-2.css
+++ b/task6-2.css
@@ -12,10 +12,10 @@ div.all{
     color: white;
     background: #29bde0; 
 }
- .image3{
+/* .image3{
  	background: url(./images/task6-2_image3.png) no-repeat -50% 55% ;
      
-}
+}*/
 
 .menu-icon{
     position: relative;
@@ -69,6 +69,7 @@ div.all{
 	/*padding-left: 15px;*/
 	line-height: 75px;
 	
+	
 
 }
 .txtleft{
@@ -104,6 +105,7 @@ div.arrow{
 	margin-bottom: 75px;
 	border-bottom: 1px white solid;
 	padding: 0px;
+	position: relative;
 	overflow: auto;
 }
 
@@ -138,6 +140,16 @@ div.box{
 	top: 48px;
 }
 /*怎么精确定位1号位置*/
+ul{
+	list-style: none;
+	position: absolute;
+	top: 200px;
+
+}
+ul li{
+	float: left;
+	margin-right: 7px;
+}
 
 .fixed{
 	background: #fbb435;
